# ND3X

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  bootstrap_check.py  docker-compose.release.yml  docker-compose.yml  pytest.ini  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
db/: skill_consolidation_phase1.sql  skill_consolidation_phase2_builtin_default.sql  skill_descriptions_disambiguation.sql
desktop/: .gitignore  README.md  build_app.sh  release.sh
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: PLATFORM.md  agent-mode.md  background-agents.md  light-mode.md
packaging/: build_desktop.sh  nd3x.spec  requirements-build.txt  run_server.py
src/: server.py
tests/: test_activity_tool_scope_and_budget.py  test_agent_capabilities.py  test_agent_loop_budget_overrides.py  test_app_settings_registry.py  test_ask_cancellation.py  test_attachment_provider_resources.py  test_azure_foundry_provider.py  test_background_slot.py  test_background_task_persistence.py  test_board.py  test_builtin_default_tools.py  test_capability_router.py  test_cascade_delete_skill_tool.py  test_chat_attachments.py  test_claude_code_chat_agent.py  test_claude_code_operation_runner.py  test_claude_code_provider.py  test_cli_session_persistence.py  test_cognition_agent.py  test_compact_tool_result_keeps_content.py  test_compaction.py  test_db_roles_and_admin_api.py  test_goal_mode.py  (+85 more)
(+393 files in other folders)
